UHF-12675: Fix spacing between items and hide unwanted labels from the preview page

--- a/public/themes/custom/hdbt_subtheme/src/scss/06-components/forms/_hdbt-react-form.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/06-components/forms/_hdbt-react-form.scss
@@ -32,6 +32,10 @@
 
 .hdbt-react-form__preview-accordion-item .hdbt-form--section__content {
   padding-block-start: $spacing-quarter;
+
+  .array-item:not(:only-child) {
+    margin-block-end: $spacing-and-half;
+  }
 }
 
 .hdbt-react-form__subvention-table {
